dark mode fixes

--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ body {
 
 .calcInputDark .btnGen {
     background-color: #212121;
+    color: white;
 }
 
 .calcInputDark .btnGen:hover {
